--- a/SWEN1_MCTG/Protokoll/protokoll.tex
+++ b/SWEN1_MCTG/Protokoll/protokoll.tex
@@ -83,6 +83,9 @@ User haben die Möglichkeit, \texttt{Packages} von verschiedner Qualität zu kau
 Um die \texttt{Coins} des \texttt{Users} zu speichern, wurde die \texttt{CoinPurse}-Klasse implementiert. Das \texttt{CoinPurseRepository} und die \texttt{PackageService}-Klasse übernehmen die nötigen Schritte für den Kauf von \texttt{Packages} in der Datenbank.
 \texttt{Coins} haben außerdem auch einen verschiedenen Wert, je nach \texttt{CoinType}. Dies wird im \texttt{CoinType}-Enum festgelegt.
 
+\subsection{Trading}
+Die Trading Funktionalität wurde nicht implementiert.
+
 \subsection{Datenbank}
 Die Datenbank wurde in \texttt{PostgreSQL} erstellt und beinhaltet die folgenden Tabellen:
 \begin{itemize}
