Final refactoring, ready for presentation

--- a/SWEN1_MCTG/Protokoll/protokoll.tex
+++ b/SWEN1_MCTG/Protokoll/protokoll.tex
@@ -74,9 +74,9 @@ Die Verwendung einer globalen Klasse für die Enumerationen ermöglicht eine ein
 Weiters führt die Verwendung von Enumerationen zu einer verbesserten Lesbarkeit des Codes und die globale Sammlung der Enumerationen ermöglicht eine einfache Erweiterung und eine übersichtliche Struktur.
 
 \subsection{Unit Tests}
-Für die Klassen \texttt{User, Card} und \texttt{Battle} sowie für die Repositories \texttt{StackRepository} und \texttt{UserRepository} wurden Unit Tests implementiert.
+Für die Klassen \texttt{User, Card} und \texttt{Battle} sowie für das Repository \texttt{UserRepository} wurden Unit Tests implementiert.
 Die Tests der Klassen achten vor allem auf eine richtige Initialisierung der Objekte und das korrekte Verhalten bei Änderungen der Objekteigenschaften. 
-Die Tests der Repositories überprüfen die korrekte Speicherung und den korrekten Zugriff auf die Daten in der Datenbank.
+Die Tests des Repositories überprüfen die korrekte Speicherung und den korrekten Zugriff auf die Daten in der Datenbank.
 
 \subsection{Unique Feature}
 User haben die Möglichkeit, \texttt{Packages} von verschiedner Qualität zu kaufen. Im \texttt{PackageType}-Enum sind die jeweiligen Typen aufgelistet. Ein \texttt{Package} kostet bestimmt viele \texttt{Coins}, je nach Qualität.
