--- a/SWEN1_MCTG/Protokoll/protokoll.tex
+++ b/SWEN1_MCTG/Protokoll/protokoll.tex
@@ -23,6 +23,12 @@
 
 \maketitle
 
+\noindent\textbf{Hinweis:} Um die Datenbank so wie in meinem Projekt vorgesehen erstellen zu können, kann die Datei \texttt{backup.sql} in PostgreSQL / pgAdmin 4 importiert werden.
+Weiters kann die Datei \texttt{SQL\_Statements\_Fixed\_Cards.txt} dazu verwendet werden, um von mir vorgegebene Karten in die Datenbank zu importieren.
+Zur Sicherheit sind die CREATE Statements für die Tabellen auch in der Datei \texttt{SQL\_CREATE\_COMMANDS.txt} enthalten.
+Die \texttt{Connection-Strings}, die ich zur Verbindung mit der Datenbank verwendet habe, sind in der Datei \texttt{appsettings.json} enthalten.
+
+
 \section{Einführung}
 \subsection{Projektstruktur}
 Das Projekt MCTG ist in mehrere Klassen aufgeteilt. Durch Vererbung und Polymorphismus wird eine einfache Erweiterung des Spiels ermöglicht.
@@ -37,7 +43,7 @@ Die meisten Methoden, die Zugriff auf die Datenbank benötigen oder HTTP-Anfrage
 \subsection{User}
 Die \texttt{User}-Klasse repräsentiert einen Benutzer des Spiels. Um die Daten persistent zu halten, werden User in der Datenbank gespeichert.
 Die \texttt{User}-Klasse ist eine der wichtigsten und am häufigsten verwendeten Klassen im Projekt, da die meisten Operationen von dem \texttt{User} abhängen.
-Änderungen an den User-Objekten werden in der Datenbank gespeichert, um die Daten konsistent zu halten, während Informationen auch direkt von der \texttt{User}-Tabelle abgerufen werden.
+Änderungen an den \texttt{User}-Objekten werden in der Datenbank gespeichert, um die Daten konsistent zu halten, während Informationen auch direkt von der \texttt{User}-Tabelle abgerufen werden.
 
 \subsection{Card}
 Die \texttt{Card}-Klasse repräsentiert eine Karte im Spiel. Es gibt verschiedene Arten von Karten, die von der \texttt{Card}-Klasse abgeleitet sind, \texttt{MonsterCard} und \texttt{SpellCard}.
@@ -45,12 +51,12 @@ Die Karten werden in der Datenbank gespeichert und können von \texttt{Usern} ge
 Da \texttt{User}, wie in einem Trading Card Game üblich, mehrere Karten derselben Art besitzen können, wurde die Zwischentabelle \texttt{user\_cards} erstellt, die die Beziehung zwischen \texttt{Usern} und \texttt{Cards} repräsentiert.
 
 \subsection{Battle}
-Die \texttt{Battle}-Klasse repräsentiert ein \texttt{Battle} zwischen zwei \texttt{Usern}. Die Karten der \texttt{User} werden in einem \texttt{Stack} gespeichert und die Karten werden in einer Runde gespielt.
-Jede Runde wird im \texttt{BattleLog} gespeichert und am Ende des Kampfes an beide \texttt{User} ausgegeben. Außerdem übernimmt der Gewinner der Runde die Karte des Verlierers.
+Die \texttt{Battle}-Klasse repräsentiert ein \texttt{Battle} zwischen zwei \texttt{Usern}. Die Karten der \texttt{User} werden in einem \texttt{Stack} gespeichert und die gezogenen Karten werden in einer Runde gespielt.
+Jede Runde wird im \texttt{BattleLog} dokumentiert und am Ende des Kampfes an beide \texttt{User} ausgegeben. Außerdem übernimmt der Gewinner der Runde die Karte des Verlierers.
 Weiters regelt die \texttt{Battle}-Klasse die Berechnung des Schadens der Karten nach den definierten Regeln und prüft den Sieger des Kampfes.
 
 \subsection{Package}
-Ein Objekt der \texttt{Package}-Klasse repräsentiert eine Sammlung von Karten, die vom \texttt{User} mit seinen \texttt{Coins} gekauft werden können.
+Ein Objekt der \texttt{Package}-Klasse repräsentiert eine Sammlung von Karten, die vom \texttt{User} mit seinen \texttt{Coins} gekauft werden kann.
 Ein Package speichert seinen \texttt{PackageType}, die direkten Einfluss auf den Preis, Anzahl der Karten und Anzahl der Möglichkeiten für den User definiert.
 
 \subsection{Stack}
@@ -99,7 +105,7 @@ Die dafür notwendigen Operationen werden von dem zugehörigen Repository durchg
 Der \texttt{Connection-String} zur Datenbank wird in einer JSON-Datei \texttt{appsettings.json} gespeichert und von der \texttt{AppSettings}-Klasse geladen.
 
 \subsection{HTTP-Server}
-Der HTTP-Server wurde implementiert, um die Anfragen der User zu ermöglichen. Der eigentlichen Operation werden in den Handlern, die von der \texttt{Handler} Basisklasse erben, durchgeführt. Folgende Handler wurden implementiert:
+Der HTTP-Server wurde implementiert, um die Anfragen der User zu ermöglichen. Die eigentliche Operation wird in den Handlern, die von der \texttt{Handler} Basisklasse erben, durchgeführt. Folgende Handler wurden implementiert:
 \begin{itemize}
     \item \texttt{UserHandler}: Verarbeitet die Erstellung, Anmeldung, Änderung und Informationsabfrage von \texttt{Usern}.
     \item \texttt{SessionHandler}: Ermöglicht die Anmeldung von \texttt{Usern}.
@@ -108,7 +114,7 @@ Der HTTP-Server wurde implementiert, um die Anfragen der User zu ermöglichen. D
     \item \texttt{ScoreboardHandler}: Ermöglicht das Anzeigen des Scoreboards.
     \item \texttt{CardsHandler}: Ermöglicht das Anzeigen von Karten.
     \item \texttt{DeckHandler}: Ermöglicht das Anzeigen und Bearbeiten von Decks.
-    \item \texttt{StatsHandler}: Ermöglicht das Anzeigen der User-Stats.
+    \item \texttt{StatsHandler}: Ermöglicht das Anzeigen der \texttt{User}-Stats.
 \end{itemize}
 
 Der HTTP-Server funktioniert folgendermaßen:
@@ -123,11 +129,11 @@ Der HTTP-Server funktioniert folgendermaßen:
 \end{enumerate}
 
 \subsection{Tokens}
-Beim Einloggen eines \texttt{Users} wird ein \texttt{Token} generiert und an den Client zurückgegeben. Dieser \texttt{Token} wird im weiteren Verlauf des Projektes bei jeder Anfrage des Clients an den Server mitgeschickt und dient zur Authentifizierung des Benutzers. Der \texttt{Token} wird in der Datenbank gespeichert und mit dem \texttt{User} verknüpft. Der \texttt{Token} wird wie folgt generiert:
+Beim Einloggen eines \texttt{Users} wird ein \texttt{Token} generiert. Dieser \texttt{Token} wird im weiteren Verlauf des Projektes bei jeder Anfrage des Clients an den Server mitgeschickt und dient zur Authentifizierung des Benutzers. Der \texttt{Token} wird in der Datenbank gespeichert und mit dem \texttt{User} verknüpft. Der \texttt{Token} wird wie folgt generiert:
 \begin{enumerate}
     \item Nach dem der entsprechende Endpunkt (\texttt{/sessions}) vom Client erhalten wurde, wird die \texttt{\_CreateSessionAsync()}-Methode des \texttt{SessionHandler} aufgerufen.
-    \item In der Anfrage sind ein username und password string enthalten, diese werden mit den Daten in der \texttt{users} Datenbank verglichen.
-    \item Bei einem Match wird die \texttt{\_CreateTokenForAsync()}-Methode der \texttt{Token}-Klasse aufgerufen, die einen zufälligen Token erstellt und in der Datenbank gespeichert. Der generierte Token wird in der Reply mitgeschickt. Ansonsten wird eine 401-Statuscode Fehlermeldung als Reply returniert.
+    \item In der Anfrage sind ein \texttt{username \& password string} enthalten, diese werden mit den Daten in der \texttt{users} Datenbank verglichen.
+    \item Bei einem Match wird die \texttt{\_CreateTokenForAsync()}-Methode der \texttt{Token}-Klasse aufgerufen, die einen zufälligen Token erstellt und in der Datenbank speichert. Der generierte Token wird in der Reply mitgeschickt. Ansonsten wird eine 401-Statuscode Fehlermeldung als Reply returniert.
 \end{enumerate}
 
 \subsection{Interfaces}
@@ -137,14 +143,10 @@ Dadurch können Methoden, die ein \texttt{Card}-Objekt erwarten, auch ein \textt
 Das führt zu einer verbesserten Lesbarkeit und Wartbarkeit des Codes und ermöglicht eine einfachere Erweiterung des Spiels.
 
 \section{Lessons Learned}
-\subsection{Datenbank}
-Die Verwendung von \texttt{PostgreSQL} als Datenbank hat sich als gute Wahl erwiesen. Die Datenbank ist einfach zu bedienen und bietet eine gute Performance.
-Weiters bietet das grafische Interface von pgAdmin 4 als Verwaltungstool eine einfache Möglichkeit, die Datenbank zu verwalten und Abfragen auszuführen.
-Weiters half mir pgAdmin 4 speziell am Anfang der Datenbank-Entwicklung, da das Tool simpel zu bedienen ist und eine gute Übersicht über die Datenbankstruktur bietet.
-
 \subsection{Unit Tests}
 Die Unit Tests wurden mit dem \texttt{MSTest}-Framework implementiert. Vor allem die dadurch entstandene Trennung der Tests und des eigentlichen Codes, ermöglicht eine gute Übersicht des Repositories.
 Weiters hat das kontinuierliche Entwickeln von Tests während der Funktionsimplementierung dazu geführt, dass die Klassen und Methoden besser strukturiert und getestet wurden.
+Zukünftig, werde ich weiter laufend Unit Tests zu meinen Projekten implementieren, um die Qualität des Codes zu verbessern und die Funktionalität zu gewährleisten.
 
 
 \subsection{Klassenstruktur}
@@ -152,8 +154,7 @@ Die Erstellung von eigenen Klassen für spezielle Operationen, wie z.B. \texttt{
 
 \subsection{C\# und Projektarbeit}
 Zwar habe ich im Laufe meiner ersten Betriebspraxisphase bereits Erfahrung mit C\# gesammelt, jedoch war die Entwicklung eines größeren Projektes ohne ein Team eine neue Herausforderung für mich.
-Durch die Entwicklung des MCTG-Projektes konnte ich meine Kenntnisse in C\# vertiefen und habe mich auch darin verbessert, ein Projekt alleine zu verwalten und auf eigenständige, für mein Projekt passende Lösungen zu finden.
-\pagebreak
+Durch die Entwicklung des MCTG-Projektes konnte ich meine Kenntnisse in C\# vertiefen und habe mich auch darin verbessert, ein Projekt alleine zu verwalten und eigenständig für mein Projekt passende Lösungen zu finden.
 
 \section{Timetable}
 \begin{table}[h!]
@@ -164,18 +165,18 @@ Durch die Entwicklung des MCTG-Projektes konnte ich meine Kenntnisse in C\# vert
 Erste Projektstruktur & 2 \\ \hline
 Recherchen & 3 \\ \hline
 Erste Erstellung der Klassen & 5 \\ \hline
-Implementierung des HTTP-Servers & 10 \\ \hline
-Erstellung Intermediate Abgabe & 5 \\ \hline
-Datenbankstruktur & 7 \\ \hline
+Implementierung des HTTP-Servers, Handler & 12 \\ \hline
+Erstellung Intermediate Abgabe & 3 \\ \hline
+Datenbankstruktur & 5 \\ \hline
 Datenbankanbindung & 2 \\ \hline
 Erstellung der Repositories & 15 \\ \hline
 Implementierung Unique Feature & 7 \\ \hline
-Anpassung des Codes von In-Memory zu DB & 12 \\ \hline
-(Unit) Testing & 6 \\ \hline
+Anpassung des Codes von In-Memory zu DB & 8 \\ \hline
+(Unit) Testing & 3 \\ \hline
 Battle \& Asynchronität & 10 \\ \hline
-Final Refactoring & 8 \\ \hline
-Erstellung der finalen Abgabe & 4 \\ \hline
-\textbf{Summe} & \textbf{96} \\ \hline
+Final Refactoring & 10 \\ \hline
+Erstellung der finalen Abgabe & 5 \\ \hline
+\textbf{Summe} & \textbf{90} \\ \hline
 \end{tabular}
 \caption{Timetable - MCTG Projekt}
 \label{tab:timetable}
